--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "onetap-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A library to easily use Onetap's API system.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/aprxl/OnetapJS.git"
   },
   "author": "april#0001",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/string-similarity": "^4.0.0",
+    "@types/superagent": "^4.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "chalk": "^4.1.0",
+    "eslint": "^8.12.0",
+    "string-similarity": "^4.0.4",
+    "superagent": "^7.1.2"
+  }
 }
