--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "outDir": "./dist/"
   },
   "include": [
     "./src/**/*"
