--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ES2020",
     "target": "ES6",
     "noImplicitAny": true,
     "removeComments": true,
@@ -9,7 +9,5 @@
     "moduleResolution": "node",
     "outDir": "./dist/"
   },
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
